# SO

./: .gitignore  CMakeLists.txt  README.md  bomba.c  instrucao.h  instruction.c  instruction.h  kernel.c  kernel.h  log.c  log.h  main.c  memoria.h  memory.h  process.c  process.h  processo.c  processo.h  semaforo.c  semaforo.h  semaphore.c  semaphore.h  synt1  synt10  synt11  synt12  synt13  synt2  synt3  synt4  synt5  synt6  synt7  synt8  synt9  terminal.c  terminal.h
instrucao/: instrucao.c  instrucao.h
kernel/: kernel.h
memoria/: memoria.h
processo/: processo.h
ribabari/: list.h  log.h
semaforo/: semaforo.c  semaforo.h
so/: so.c  so.h
terminal/: terminal.c  terminal.h
